--- a/References/References.bib
+++ b/References/References.bib
@@ -494,3 +494,40 @@ the model.},
 	year={1972},
 	abstract={The magnetic field modulation due to the discrete nature of the field coils in a Tokamak leads to additional particle trapping. The resulting diffusion is evaluated and compared with the neoclassical diffusion. The two diffusion rates are found to be comparable in existing Tokamaks. The limit on the field ripple below which ripple diffusion should be negligible in the next generation of machines is evaluated.}
 }
+
+@article{toda_condensed_neutrals_1997,
+  author={S Toda and S-I Itoh and M Yagi and Y Miura},
+  title={A theoretical model of H-mode transition triggered by condensed neutrals near X-point},
+  journal={Plasma Physics and Controlled Fusion},
+  volume={39},
+  number={2},
+  pages={301},
+  url={http://stacks.iop.org/0741-3335/39/i=2/a=007},
+  year={1997},
+  abstract={The effects of neutrals near the X-point of tokamaks on the L/H transition are examined. Four mechanisms for bipolar losses, i.e. the loss cone loss, the bulk viscosity loss, the charge-exchange (CX) loss between ions and neutrals and the anomalous loss, occur simultaneously in high-temperature plasmas. Neutral particles near the X-point are found to trigger the H-mode transition. They cause an additional ion loss cone loss via collisions. The lower limit of the neutral density near the X-point for the onset of the H-mode transition is estimated. Neutral particles at the main plasma are shown to prevent the H-mode transition because of CX loss.}
+}
+
+@article{chankin_loss_1993,
+  author={A.V. Chankin and G.M. McCracken},
+  title={Loss ion orbits at the tokamak edge},
+  journal={Nuclear Fusion},
+  volume={33},
+  number={10},
+  pages={1459},
+  url={http://stacks.iop.org/0029-5515/33/i=10/a=I05},
+  year={1993},
+  abstract={In divertor tokamak plasmas with intense additional heating a large fraction of the power deposited at the target has been attributed to the collisionless losses of energetic ions from a region of about twice an ion poloidal Larmor radius inside the plasma boundary. These energetic ion losses can also strongly effect the formation of the radial electric field at the plasma edge, and may be responsible for the L to H transition. This paper presents the first systematic analysis of loss ion orbits at the tokamak edge. A particle following code has been developed to assess the detailed shape of the loss cone of escaping ions in velocity space, its transformation in the presence of a radial electric field, the shape of the loss orbits and the effect of the reversal of the toroidal magnetic field. The results obtained allow one to calculate the total amount of direct ion losses, which is expected to be substantially less than that estimated from the simplified assumptions used, because of the narrowness of the loss cone. The complex response of the ion loss cone to changes in radial electric field can potentially create a condition of instability (like the L to H transition) with rapid growth of the negative potential inside the plasma boundary. Numerical simulations have shown a relatively weak dependence of the energetic ion behaviour on the exact profile of the potential, suggesting that the resonant effects of the ion interaction with the magnetic field, expected from the theory of an idealized large aspect ratio tokamak (r/R<<1) and leading, for instance, to the effect of banana orbit squeezing, may not exist.}
+}
+
+@article{diamond_poloidal_1991,
+	author = {P. H. Diamond and Y.‐B. Kim},
+	title = {Theory of mean poloidal flow generation by turbulence},
+	journal = {Physics of Fluids B: Plasma Physics},
+	volume = {3},
+	number = {7},
+	pages = {1626-1633},
+	year = {1991},
+	doi = {10.1063/1.859681},
+	URL = {http://dx.doi.org/10.1063/1.859681},
+}
+
