--- a/Prelude/Slides/Prelude_Slides.tex
+++ b/Prelude/Slides/Prelude_Slides.tex
@@ -125,7 +125,7 @@
 \frametitle{H-mode}
 \begin{itemize}
 	\item In 1982 at ASDEX, H-mode was discovered when heating was increased, which increased confinement time by a factor of around 2 \cite{wagner_development_1984}.
-	\item Anomalous transport has been found to be the dominant transport of particles and energy.
+	\item Anomalous transport has been found to be the dominant transport of particles and energy \cite{freidberg_plasma_2007}.
 	\item H-mode forms as a response to significant reduction in this anomalous transport at the plasma edge.
 	\begin{itemize}
 		\item The prevailing hypothesis is that high auxiliary power develops strong sheared plasma flow.
