Fixed Master's to PhD

--- a/References/References.bib
+++ b/References/References.bib
@@ -207,7 +207,7 @@ the model.},
 
 @phdthesis{staps_backstepping_2017,
 	address = {Eindhoven},
-	type = {Master's},
+	type = {Master's Thesis},
 	title = {Backstepping control of {H}-{L} confinement transition in fusion plasma model},
 	school = {Eindhoven University of Technology},
 	author = {Staps, T.J.A.},
@@ -417,7 +417,7 @@ the model.},
 
 @phdthesis{weymiens_bifurcation_2014,
 	address = {Eindhoven},
-	type = {Master's},
+	type = {PhD Thesis},
 	title = {Bifurcation {Theory} of the {L}-{H} {Transition} in {Fusion} {Plasmas}},
 	school = {Technische Universiteit Eindhoven},
 	author = {Weymiens, W.},
