Added FENICS references

--- a/References/References.bib
+++ b/References/References.bib
@@ -528,6 +528,25 @@ the model.},
 	pages = {1626-1633},
 	year = {1991},
 	doi = {10.1063/1.859681},
-	URL = {http://dx.doi.org/10.1063/1.859681},
+	URL = {http://dx.doi.org/10.1063/1.859681}
+}
+
+@book{FENICS_reference,
+	title = {Solving PDEs in Python},
+	author = {Hans Petter Langtangen and Anders Logg},
+	year = {2017},
+	publisher = {Springer},
+	doi = {10.1007/978-3-319-52462-7},
+	isbn = {978-3-319-52461-0}
+}
+
+@book{FENICS_full_book,
+	title = {Automated Solution of Differential Equations by the Finite Element Method},
+	author = {Anders Logg and Kent-Andre Mardal and Garth N. Wells and others},
+	editor = {Anders Logg and Kent-Andre Mardal and Garth N. Wells},
+	year = {2012},
+	publisher = {Springer},
+	doi = {10.1007/978-3-642-23099-8},
+	isbn = {978-3-642-23098-1}
 }
 
